--- a/后端/src/main/resources/application.properties
+++ b/后端/src/main/resources/application.properties
@@ -7,16 +7,17 @@ fdfs.soTimeout=1501
 fdfs.connectTimeout=601
 fdfs.thumbImage.width=80   
 fdfs.thumbImage.height=80
-fdfs.trackerList[0]=67.205.143.108:22122
+fdfs.trackerList[0]=157.230.149.25:22122
 
 ############################################################
 #
 # 配置数据源相关	使用 HikariCP 数据源
 #
 ############################################################
-# jdbc_config   datasource
+# jdbc_config   datasource  67.205.143.108
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://67.205.143.108:3306/db_netty?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+spring.datasource.url=jdbc:mysql://157.230.149.25:3306/db_netty?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/db_netty?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=root
 # Hikari will use the above plus the following to setup connection pooling
@@ -63,13 +64,34 @@ pagehelper.params=count=countSql
 #
 ############################################################
 # 配置api端口
-server.port=8081
-
-
-############################################################
-# Server - tomcat
-############################################################
+server.port=8099
 server.tomcat.uri-encoding=UTF-8
+
+
+
+############################################################
+# Redis
+############################################################
+# Redis数据库索引（默认为0）
+spring.redis.database=1
+# Redis服务器地址
+spring.redis.host=157.230.149.25
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=5000
+
+
 
 
 ############################################################
@@ -77,3 +99,4 @@ server.tomcat.uri-encoding=UTF-8
 ############################################################
 # 在当前项目下生成springboot.log日志
 # logging.file=springboot.log
+
